Fixed blur covering page

--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -10,11 +10,14 @@
 	transition: opacity 100ms ease-in-out;
 	margin: none;
 	padding: none;
-	position: absolute;
-	width: 100%;
-	height: 100%;
+	position: fixed;
+	width: 550px;
+	height: 550px;
+	padding: 50px;
 	backdrop-filter: blur(10px);
 	text-align: center;
+	left: -50px;
+	top: -50px;
 }
 
 .form {
